# DeribitTestAPITestingApp

./: README.md
DeribitTradingTestingApp/: CMakeLists.txt  setup.md
DeribitTradingTestingApp/GetInstruments/: CMakeLists.txt
DeribitTradingTestingApp/GetInstruments/config/: settings.json
DeribitTradingTestingApp/GetInstruments/src/: main.cpp
DeribitTradingTestingApp/include/: config.hpp
DeribitTradingTestingApp/src/: config.cpp  main.cpp  mainold.cpp
